force-app/main/default/objects/Classroom__c/Classroom__c.object-meta.xml
<CustomObject>
    <label>Classroom</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Classroom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classrooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>