force-app/main/default/objects/Classroom__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>Choose your subject</inlineHelpText>
    <label>Subject</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>EVS</fullName>
            </value>
            <value>
                <fullName>History and civics</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>