force-app/main/default/objects/Classroom__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Total marks</description>
    <label>Total</label>
    <length>3</length>
    <type>Text</type>
</CustomField>