force-app/main/default/objects/Classroom__c/listViews/My_Custom_View.listView-meta.xml
<ListView>
    <fullName>My_Custom_View</fullName>
    <columns>NAME</columns>
    <columns>Standard__c</columns>
    <columns>Subject__c</columns>
    <columns>Teacher__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Custom View</label>
    <language>en_US</language>
</ListView>